# py-qa-sap

./: LICENSE  MANIFEST.in  README.md  customizing.py  kivy_customizing.py  kivy_engine.py  kivy_main.py  pyproject.toml  sap_engine.py  sap_gui.py  test.py  test2.py  test3.py
src/qasap/: dashboard.py
src/qasap/cli/: cli.py
src/qasap/models/: sheet.py
src/qasap/streamlit/: Main.py  style.css
